EVI-563, EVI-564: Enhance signin, signout and password reset flows (#866)
* Package cleanups

* Checkpoint commit

* Add initial test for forgot password

* Finish tests

* Fix forgot password depenedcy references

* Remove onboarding

* Remove unused var

* Update snapshot to reflect new spec from Amber

* Add an intensity bar component

* Add a library to measure password strength

* Make password reset request

* Fix tests

* Refactor to support unit testing

* Checkpoint commit

* Use simpler regex validator

* Remove unused variable

* Update snapshots

* Avoid reloading app when doing an SPA logout

* Break ZXCVBN in to seperate chunks

* More tests

* Adds signin tests

* Update index.html

* Update FlashMessage.scss

--- a/src/components/FlashMessage/FlashMessage.scss
+++ b/src/components/FlashMessage/FlashMessage.scss
@@ -4,30 +4,34 @@
   position: relative;
 
   &__body {
-    background: $zorroa-color-blue-3;
-    border: 1px solid $zorroa-color-blue-2;
-    padding: 10px;
-    margin: 10px 0;
+    background: $zorroa-color-white;
+    border-top: $zorroa-metric-base / 2 solid;
+    padding: $zorroa-metric-base * 1.5;
+    margin: $zorroa-metric-base 0 $zorroa-metric-base * 3;
     max-width: 100%;
     color: $zorroa-color-white;
     z-index: 2;
     animation-duration: 400ms;
     animation-name: slidein;
     animation-timing-function: ease-in-out;
+    color: $zorroa-color-gray-dark-1;
+    box-shadow: 0 2px 15px -1px rgba(0,0,0,.2);
+    line-height: 1.2;
 
     &--success {
-      background: $zorroa-color-green-1;
       border-color: $zorroa-color-green-4;
     }
 
     &--warning {
-      background: $zorroa-color-yellow-1;
       border-color: $zorroa-color-yellow-2;
     }
 
     &--error {
-      background: $zorroa-color-pink-2;
       border-color: $zorroa-color-pink-1;
+    }
+
+    &--info {
+      border-color: $zorroa-color-blue-1;
     }
   }
 }
