--- a/src/components/ModalOverlay/ModalOverlay.scss
+++ b/src/components/ModalOverlay/ModalOverlay.scss
@@ -3,7 +3,7 @@
 
 .ModalOverlay {
   position: fixed;
-  background: rgba($zorroa-color-black, .75);
+  background: rgba($zorroa-color-black, 0.75);
   top: 0;
   left: 0;
   z-index: 1000;
@@ -13,12 +13,15 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  cursor: pointer;
   animation: fadeIn 300ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
 
   &--closing {
     opacity: 0;
     animation: fadeOut 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  }
+
+  &--closeable {
+    cursor: pointer;
   }
 
   ::-webkit-scrollbar {
@@ -43,6 +46,11 @@
     overflow: hidden;
     cursor: auto;
     animation: slideIn 600ms cubic-bezier(0.86, 0, 0.07, 1);
+
+    &--small {
+      height: unset;
+      width: unset;
+    }
 
     &--closing {
       transform: translateY(100vh);
