--- a/src/components/ModalOverlay/ModalOverlayBody.scss
+++ b/src/components/ModalOverlay/ModalOverlayBody.scss
@@ -16,6 +16,12 @@
     overflow-y: auto;
   }
 
+  &--small {
+    height: unset;
+    width: unset;
+    padding: unset;
+  }
+
   &__scroll {
     width: $content-max-width - $sidebar-width - $content-padding * 2;
     max-height: calc(#{$content-height} - #{$content-padding * 2});
@@ -23,9 +29,13 @@
     .ModalOverlayBody--narrow & {
       width: $content-max-width - $sidebar-width-narrow - $content-padding * 2;
     }
+
+    &--small {
+      width: unset;
+    }
   }
 
-  @media(max-width: $content-max-width * 1.2) {
+  @media (max-width: $content-max-width * 1.2) {
     overflow-y: auto;
 
     &__scroll {
