--- a/src/components/auth/Auth.scss
+++ b/src/components/auth/Auth.scss
@@ -5,6 +5,10 @@
   background-color: $zorroa-nearwhite;
   height: 100vh;
   width: 100vw;
+  &--small {
+    height: 100%;
+    width: 100%;
+  }
 }
 
 .auth-box {
@@ -14,7 +18,7 @@
   width: 400px;
   justify-content: space-between;
   border-radius: 3px;
-  box-shadow: 0px 24px 20px -20px #BBB;
+  box-shadow: 0px 24px 20px -20px #bbb;
   align-items: center;
   justify-content: center;
 }
@@ -52,7 +56,9 @@
   text-align: center;
   cursor: pointer;
 
-  &:hover { color: $zorroa-sickly-green; }
+  &:hover {
+    color: $zorroa-sickly-green;
+  }
 }
 
 .auth-confirm {
@@ -69,9 +75,15 @@
   cursor: pointer;
   background-color: $zorroa-sickly-green;
   text-transform: uppercase;
-  &.disabled { background-color: $zorroa-lightgray; }
-  &:hover:not(.disabled) { background-color: $zorroa-hover-green; }
-  &:active:not(.disabled) { background-color: $zorroa-navy-blue; }
+  &.disabled {
+    background-color: $zorroa-lightgray;
+  }
+  &:hover:not(.disabled) {
+    background-color: $zorroa-hover-green;
+  }
+  &:active:not(.disabled) {
+    background-color: $zorroa-navy-blue;
+  }
 }
 
 .auth-form {
@@ -82,7 +94,7 @@
 
 .auth-field {
   width: 100%;
-  margin: $zorroa-metric-base $zorroa-metric-base / 2
+  margin: $zorroa-metric-base $zorroa-metric-base / 2;
 }
 
 .auth-message {
@@ -124,7 +136,7 @@
 
 .auth-help {
   width: 100%;
-  margin: $zorroa-metric-base $zorroa-metric-base / 2 $zorroa-metric-base * 3
+  margin: $zorroa-metric-base $zorroa-metric-base / 2 $zorroa-metric-base * 3;
 }
 
 .auth-error-msg {
