Op/evi 450 loading indicator (#877)
* changes FlipbookViewer to FlipbookInspector

* changes FlipbookViewer to FlipbookInspector

* changes FlipbookViewer to FlipbookInspector

* changes FlipbookViewer to FlipbookInspector

* changes FlipbookViewer to FlipbookInspector

* changes VideoViewer to VideoInspector

* changes VideoViewer.* to VideoInspector.*

* changes Image to ImageInspector

* updates css class to ImageInspector

* creates Image 'player' component

* adds css for loading indicator

* adds loading indicator to image player

* converts image to dataURI to reduce network requests

* refactors encoding

* refactors for testability

* refactors for testability

* tests Image.js

* removes old file

* tests getImageURI()

* Remove unused variable

--- a/src/components/Inspector/FlipbookInspector.scss
+++ b/src/components/Inspector/FlipbookInspector.scss
@@ -2,7 +2,7 @@
 
 $film-strip-grabber-height: $zorroa-metric-base * 3;
 
-.FlipbookViewer {
+.FlipbookInspector {
   height: 100%;
   width: 100%;
   @include flexCol;
