EVI-553: Fix bugs in exports (#879)
* Fix issue where a changing constant crashed the exports UI

* Fix restricted asset count's inverted logic

* Fix CSS glitch

* Only offer export of selected assets

* Fix up tests

--- a/src/components/FlashMessage/FlashMessage.scss
+++ b/src/components/FlashMessage/FlashMessage.scss
@@ -18,6 +18,11 @@
     box-shadow: 0 2px 15px -1px rgba(0,0,0,.2);
     line-height: 1.2;
 
+    .dark & {
+      background: $zorroa-color-gray-dark-2;
+      color: $zorroa-color-white;
+    }
+
     &--success {
       border-color: $zorroa-color-green-4;
     }
