--- a/src/components/Code/Code.scss
+++ b/src/components/Code/Code.scss
@@ -1,6 +1,5 @@
 @import '../../styles/core-mixins.scss';
 
-.Section {
+.Code {
   margin: $zorroa-metric-base * 3 0;
-  max-width: $zorroa-metric-base * 60;
 }
