--- a/src/lib/Form/Button.scss
+++ b/src/lib/Form/Button.scss
@@ -3,7 +3,7 @@
 .FormButton {
   height: 40px;
   background: $zorroa-color-green-1;
-  color: $zorroa-white;
+  color: $zorroa-color-white;
   padding: 0 30px;
   display: flex;
   justify-content: center;
