--- a/src/lib/Form/Input.scss
+++ b/src/lib/Form/Input.scss
@@ -1,4 +1,3 @@
-@import '../../styles/colors.scss';
 @import './variables.scss';
 
 .FormInput {
@@ -7,7 +6,7 @@
   margin-bottom: 20px;
 
   .dark & {
-    color: $zorroa-dark-color-text;
+    color: $zorroa-color-gray-dark-1;
   }
 
   &--vertical {
@@ -75,8 +74,8 @@
     }
 
     &--error {
-      color: $zorroa-color-danger;
-      border-color: $zorroa-color-danger;
+      color: $zorroa-color-pink-1;
+      border-color: $zorroa-color-pink-1;
     }
 
     &--color {
@@ -86,7 +85,7 @@
   }
 
   &--error {
-    color: $zorroa-color-danger;
+    color: $zorroa-color-pink-1;
   }
 
   &--color {
