--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -1,6 +1,6 @@
 @import '../variables.scss';
 
-.FormButton {
+.Button {
   height: 40px;
   background: $zorroa-color-green-1;
   color: $zorroa-color-white;
@@ -31,7 +31,7 @@
     line-height: 12px;
   }
 
-  ~ .FormButton {
+  ~ .Button {
     margin-left: 20px;
   }
 
@@ -42,7 +42,7 @@
     margin-left: 0!important;
     padding: 0 20px;
 
-    ~ .FormButton {
+    ~ .Button {
       margin-left: 0;
     }
 
@@ -99,7 +99,7 @@
     background-position: center center;
     background-repeat: no-repeat;
 
-    .FormButton--mini & {
+    .Button--mini & {
       left: 2px;
       height: 14px;
       width: 14px;
@@ -143,7 +143,7 @@
     &--state-active {
       transform: translateX(15px);
 
-      .FormButton--mini & {
+      .Button--mini & {
         transform: translateX(8px);
       }
     }
