--- a/src/lib/Heading/Heading.scss
+++ b/src/lib/Heading/Heading.scss
@@ -2,7 +2,7 @@
 
 .Heading {
   margin: 10px 0;
-  font-family: "Roboto";
+  font-family: $zorroa-font-family-body;
   font-weight: 500;
   color: $zorroa-color-gray-dark-2;
 
