--- a/src/lib/variables.scss
+++ b/src/lib/variables.scss
@@ -1,5 +1,6 @@
 // WARNING: Ensure this file is kept up to date with variables.js
 $zorroa-metric-base: 10px;
+$zorroa-font-family-body: 'Roboto', sans-serif;
 
 $zorroa-color-blue-1: #4160b8;
 $zorroa-color-blue-2: #387ca3;
