--- a/src/lib/Label/Label.scss
+++ b/src/lib/Label/Label.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 20px;
+  font-family: $zorroa-font-family-body;
 
   .dark & {
     color: $zorroa-color-gray-dark-4;
