--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -15,16 +15,18 @@
   font-size: 14px;
   cursor: pointer;
   position: relative;
+  border: 0;
 
   &,
   * {
     box-sizing: border-box;
   }
 
+  &:focus,
   &:hover {
-    background-color: $zorroa-color-gray-dark-4;
-    border-color: $zorroa-color-gray-dark-4;
     opacity: 1;
+    filter: brightness(90%);
+    outline: 0;
   }
 
   &--white-label {
