--- a/src/lib/Label/Label.scss
+++ b/src/lib/Label/Label.scss
@@ -6,12 +6,14 @@
   flex-direction: row;
   margin-bottom: 20px;
   font-family: $zorroa-font-family-body;
+  align-items: center;
 
   .dark & {
     color: $zorroa-color-gray-dark-4;
   }
 
   &--vertical {
+    align-items: start;
     flex-direction: column;
   }
 
