--- a/src/lib/Button/Button.scss
+++ b/src/lib/Button/Button.scss
@@ -2,53 +2,79 @@
 
 .Button {
   font-family: $zorroa-font-family-body;
-  height: 40px;
-  background: $zorroa-color-green-1;
+  height: $zorroa-metric-base * 4;
   color: $zorroa-color-white;
-  padding: 0 30px;
+  padding: 0 $zorroa-metric-base * 3;
   display: flex;
   justify-content: center;
   align-content: center;
   text-transform: uppercase;
-  border: 1px solid $zorroa-color-green-1;
-  border-radius: 3px;
   font-size: 14px;
   cursor: pointer;
   position: relative;
   border: 0;
+  outline: 0;
 
   &,
   * {
     box-sizing: border-box;
   }
 
-  &:focus,
-  &:hover {
-    opacity: 1;
-    filter: brightness(90%);
-    outline: 0;
-  }
+  &__underlay {
+    background: $zorroa-color-green-1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border-radius: 3px;
+    z-index: 0;
 
-  &--white-label {
-    opacity: .9
+    &--mini {
+      background: $zorroa-color-blue-1;
+    }
+
+    &--minimal {
+      background: none;
+    }
+
+    &--error {
+      background-color: $zorroa-color-pink-1;
+    }
+
+    &--disabled {
+      background-color: $zorroa-color-gray-dark-3;
+    }
+
+    .Button:hover &,
+    .Button:focus & {
+      filter: brightness(80%);
+
+      &--disabled {
+        filter: brightness(100%);
+      }
+
+      &--minimal {
+        background-color: $zorroa-color-gray-light-2;
+      }
+    }
   }
 
   &__icon {
-    padding-right: 5px;
+    padding-right: $zorroa-metric-base / 2;
     font-size: 14px;
     line-height: 12px;
+    z-index: 1;
   }
 
   ~ .Button {
-    margin-left: 20px;
+    margin-left: $zorroa-metric-base * 2;
   }
 
   &--minimal {
-    background: none;
     color: $zorroa-color-gray-dark-4;
-    border-color: transparent;
     margin-left: 0!important;
-    padding: 0 20px;
+    padding: 0 $zorroa-metric-base * 2;
 
     ~ .Button {
       margin-left: 0;
@@ -65,16 +91,9 @@
     }
   }
 
-  &--error {
-    background-color: $zorroa-color-pink-1;
-    border-color: $zorroa-color-pink-1;
-  }
-
   &--disabled {
     &,
     &:hover {
-      background-color: $zorroa-color-gray-dark-3;
-      border-color: $zorroa-color-gray-dark-4;
       color: $zorroa-color-gray-dark-4;
       cursor: not-allowed;
       opacity: .5;
@@ -82,10 +101,8 @@
   }
 
   &--mini {
-    border-color: $zorroa-color-blue-1;
-    background: $zorroa-color-blue-1;
     color: $zorroa-color-white;
-    padding: 5px 10px;
+    padding: $zorroa-metric-base / 2 $zorroa-metric-base;
     height: initial;
     display: flex;
     justify-content: center;
@@ -106,6 +123,7 @@
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
+    z-index: 1;
 
     .Button--mini & {
       left: 2px;
@@ -143,13 +161,14 @@
     justify-content: center;
     align-items: center;
     align-content: center;
+    z-index: 1;
 
     &--mini {
       font-weight: 300;
     }
 
     &--state-active {
-      transform: translateX(15px);
+      transform: translateX($zorroa-metric-base * 1.5);
 
       .Button--mini & {
         transform: translateX(8px);
